clusters/openshift/apps/development/radar-ng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar-ng-api
  namespace: radar-ng
  labels:
    external-dns: 'true'
  annotations:
    external-dns.alpha.kubernetes.io/target: gateway.apps.sno-ai-lab.vanillax.xyz
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
    sectionName: https
  hostnames:
  - radar-ng-api.gateway.apps.sno-ai-lab.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: tile-server
      port: 8080
      weight: 1
